# tman

./: .gitignore  Cargo.toml  README.md
src/: algo.rs  data.rs  main.rs  util.rs
src/app/: command.rs  execute.rs  grid.rs  grids.rs  mod.rs
src/app/plugin/: editor.rs  mod.rs
src/app/viewer/: color_block.rs  editor.rs  mod.rs
src/data/: auto_schedule.rs  ev.rs  event.rs  mod.rs  pj.rs  project.rs
src/view/: calendar.rs  command.rs  edit.rs  mod.rs  plan.rs
src/view/app/: command.rs  editor.rs  mod.rs
src/view/ui/: grid.rs  mod.rs  prompt.rs
tmp/: latest.json
