[package]
name = "tman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crossterm > 0.25 has duplicated event capture problem
crossterm = {version="0.25"}
chrono = {version="0.4.24",features=["clock"]}
tui = "0.19.0"
serde = {version="1.0.163", features=["derive"]}
serde_yaml = "0.9.21"
unicode-width = "0.1.10"
rand = "0.8.5"
regex = "1.8.4"
lazy_static = "1.4.0"
